# django_demo

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  readme.txt  requirements.txt
app/app/: settings.py  urls.py  views.py
app/chatbot/: admin.py  forms.py  models.py  serializers.py  tools.py  urls.py  views.py
app/chatbot/migrations/: 0001_initial.py  0002_file.py  0003_chunk.py
app/chatbot/templates/: index.html  knowledge_base.html
app/rag/: general_parser.py  naive.py  settings.py
app/rag/nlp/: __init__.py  query.py  rag_tokenizer.py  search.py  synonym.py  term_weight.py
app/rag/parser/: __init__.py  docx_parser.py  pdf_parser.py  txt_parser.py
app/rag/utils/: __init__.py  file_utils.py  log_utils.py
app/rag/vision/: __init__.py  layout_recognizer.py  ocr.py  recognizer.py  t_ocr.py  t_recognizer.py  table_structure_recognizer.py
app/templates/: login.html
app/workflow/: urls.py  views.py
app/workflow/templates/: workflow.html
