[tool.poetry]
name = "django-demo"
version = "0.8.0"
description = ""
authors = ["hsiehpinghan <thank.hsiehpinghan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "5.0.1"
djangorestframework = "3.14.0"
langchain-huggingface = "0.0.3"
langchain-openai = "0.1.10"
langchain = "0.2.7"
python-dotenv = "1.0.1"
faiss-cpu = "1.7.4"
langchain-community = "0.2.1"
tika = "2.6.0"
python-docx = "1.1.0"
xgboost = "2.0.3"
pdfplumber = "0.10.4"
pypdf = "4.3.0"
markdown = "3.6"
cachetools = "5.3.3"
ruamel-yaml = "0.18.6"
strenum = "0.4.15"
datrie = "0.8.2"
hanziconv = "0.3.2"
nltk = "3.8.1"
six = "1.16.0"
opencv-python-headless = "4.9.0.80"
shapely = "2.0.3"
pyclipper = "1.3.0.post5"
elasticsearch-dsl = "8.12.0"
roman-numbers = "1.0.2"
word2number = "1.1"
cn2an = "0.5.22"
pandas = "2.2.1"
pycryptodomex = "3.20.0"
onnxruntime-gpu = "1.17.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
